# autoresearch

./: CLAUDE.md
gpu-pretraining/: .gitignore
mnist-search/: .gitignore  batch_goalB.py  batch_run.py  batch_run_goalB2.py  batch_run_goalC.py  prepare.py  program.md  pyproject.toml  report.md  run_batch.sh  run_experiment.sh  run_goalD1.py  run_goalD1_squeeze.py  run_goalD2.py  run_goalD2_squeeze.py  train.py
